[tool.poetry]
name = "my-bedtimes"
version = "0.1.0"
description = ""
authors = ["Judah <i460958@FontysICT.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
